update for chit chat

--- a/Web/chitchat.html
+++ b/Web/chitchat.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Chit Chat Section
+title: Chit Chat Session
 ---
 {% javascript_asset_tag chit-chat %}
     - /_assets/chit-chat.js.coffee
@@ -9,7 +9,7 @@ title: Chit Chat Section
 <!-- Main component for a primary marketing message or call to action -->
 
 <div class="container">   
-  <h2>Chit Chat Section</h2>  
+  <h2>Chit Chat Session</h2>  
   <div id="chit-chat-section-contents">
   </div>
 </div>
