UPdate Created_By and Created_Date

--- a/Web/announcement.html
+++ b/Web/announcement.html
@@ -20,6 +20,7 @@ title: Report
 <script type="text/javascript">
       $(document).ready(function() {
         cp.announcements = new cp.Announcements()
+        cp.announcements.validate()
         //cp.horizontalBootstrapForm = new cp.HorizontalBootstrapForm();
       });
 </script>
